# sentinal-ai

./: .gitignore  Dockerfile  app.py  requirements.txt
thrember/: README.md  model.py  pyproject.toml  setup.cfg
thrember/examples/: ember2024-notebook.ipynb  eval_lgbm.py  lgbm_config_family.json  lgbm_config_tag.json  train_lgbm.py
